test/fail/integration/_fail_grammar_let_stmts_2.hs
main = do
       let x :: Int; y :: 
       print "hello"